<?xml version="1.0" encoding="utf-8"?>
<!-- 
 Semantic Assistants - http://www.semanticsoftware.info/semantic-assistants
 
 Copyright (C) 2014 Semantic Software Lab, http://www.semanticsoftware.info
 Rene Witte
 Bahar Sateli
 
 This file is part of the Semantic Assistants architecture, and is free
 software, licensed under the GNU Lesser General Public License as published 
 by the Free Software Foundation, either version 3 of the License, or 
 (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU Lesser General Public License for more details.
 
 You should have received a copy of the GNU Lesser General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
	android:key="semassist_settings" 
	android:title="Global Settings" 
	android:summary="prefSummary goes here">

    <PreferenceCategory 
        android:title="@string/lblPrefConnectivity">
        <ListPreference
            android:key="selected_server_option"
            android:title="@string/lblPrefServer"
            android:summary="@string/lblPrefServerSumm"
            android:entries="@array/server_options"
            android:entryValues="@array/server_options_values"
            android:dialogTitle="@string/lblServerDialog"
            android:defaultValue="default_value" />

        <EditTextPreference
                android:key="new_server_info"
                android:name="Server Information"
                android:summary="Define a Semantic Assistants server location"
                android:title="Add a new server"/>
    </PreferenceCategory>

	<!-- PreferenceCategory 
		android:title="User Settings"
 		android:layout="@layout/user_settings">
	</PreferenceCategory-->
</PreferenceScreen>