<?xml version="1.0" encoding="utf-8"?>
<!-- 
 Semantic Assistants - http://www.semanticsoftware.info/semantic-assistants
 
 Copyright (C) 2014 Semantic Software Lab, http://www.semanticsoftware.info
 Rene Witte
 Bahar Sateli
 
 This file is part of the Semantic Assistants architecture, and is free
 software, licensed under the GNU Lesser General Public License as published 
 by the Free Software Foundation, either version 3 of the License, or 
 (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU Lesser General Public License for more details.
 
 You should have received a copy of the GNU Lesser General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/tableLayout1"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<TableRow
		android:id="@+id/tableRow1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
			<TextView
				android:id="@+id/lblHost"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/lblHost" />
		
			<EditText
				android:id="@+id/txtHost"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:hint="@string/lblHostHint">
				<requestFocus />
			</EditText>
		</TableRow>
	
		<TableRow
			android:id="@+id/tableRow2"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >
			<TextView
				android:id="@+id/lblPort"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/lblPort" />
		
			<EditText
				android:id="@+id/txtPort"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:hint="@string/lblPortHint"
				android:numeric="integer" >
			</EditText>
		</TableRow>
</TableLayout>